--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "/dist"
   ],
   "exports": {
-    ".": "./dist/*"
+    ".": "./dist/main.js"
   },
   "homepage": "https://github.com/CAndRyan/MTBjorn.Reagent",
   "bugs": {
