--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mtbjorn/reagent",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A collection of UI components",
   "main": "dist/main.js",
   "entry": "src/index.js",
@@ -47,6 +47,7 @@
     "sass-loader": "^12.4.0",
     "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.1",
+    "svg-url-loader": "^7.1.1",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2"
   },
