--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mtbjorn/reagent",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A collection of UI components",
   "main": "dist/main.js",
   "entry": "src/index.js",
@@ -43,11 +43,13 @@
     "babel-plugin-jsx-pragmatic": "^1.0.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
+    "postcss": "^8.4.12",
+    "postcss-inline-svg": "^5.0.0",
+    "postcss-loader": "^6.2.1",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
     "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.1",
-    "svg-url-loader": "^7.1.1",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2"
   },
