--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.16.7",
-    "@mtbjorn/hypotenuse": "^0.0.4",
+    "@mtbjorn/hypotenuse": "file:build/local_tarballs/mtbjorn-hypotenuse-0.0.5.tgz",
     "uuid": "^8.3.2"
   }
 }
